--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My App</title>
+<title>My Site</title>
+<meta name="tiktok-developers-site-verification" content="vTjVXrAKHbfOsZigQXODNU2835TRMLUx">
 </head>
 <body>
-<h1>My App</h1>
-<p>This website is used for verifying my TikTok Developer Application.</p>
+<h1>Site Verified</h1>
 </body>
 </html>
