--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My Site</title>
+<title>My Site tiktok</title>
 <meta name="tiktok-developers-site-verification" content="vTjVXrAKHbfOsZigQXODNU2835TRMLUx">
 </head>
 <body>
