--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <meta name="tiktok-developers-site-verification" content="vTjVXrAKHbfOsZigQXODNU2835TRMLUx">
 </head>
 <body>
-<h1>Site Verified</h1>
+<h1>Site Verified tiktok</h1>
 </body>
 </html>
