--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My Site tiktok</title>
 <meta name="tiktok-developers-site-verification" content="vTjVXrAKHbfOsZigQXODNU2835TRMLUx">
+<title>My Site</title>
 </head>
 <body>
-<h1>Site Verified tiktok</h1>
+<h1>Verification OK</h1>
 </body>
 </html>
